[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Your Name <your.email@example.com>"]
description = "A FastAPI web server to convert images to contact negatives using .acv curve adjustments."
license = "MIT"
name = "cyano-cool"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.70.0"
numpy = "^1.22.3"
opencv-python-headless = "^4.7.0.72"
pillow = "^9.0.1"
python = "^3.10"
streamlit = "^1.22.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
